# gpm

./: .gitignore  .golangci.yml  .goreleaser.yml  .rtx.toml  Cargo.toml  README.md  go.mod  go.sum  main.go  package.json
.github/: renovate.json
.github/workflows/: cicd.yaml  renovate.yaml
pkg/cli/: cli.go  install.go  list.go  search.go
pkg/cmd/: cmd.go  install.go  list.go  search.go
pkg/engine/: asset.go  asset_test.go  engine.go  guess.go
pkg/gpm/: dependency.go  dependency_test.go  gpm.go  install.go  list.go
pkg/tui/: dashboard.go  install.go  progress.go  search.go  utils.go
src/: lib.rs  main.rs  prelude.rs
src/cli/: mod.rs
src/gpm/: install.rs
