[package]
name = "gpm"
edition = "2021"
version = "0.0.0"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.4.10", features = ["derive", "env"] }
reqwest = { version = "0.11.22" }
tokio = { version = "1", features = ["full"] }
octocrab = "0.32.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
ratatui = "0.24.0"
crossterm = "0.27.0"
json_to_table = "0.6.0"
serde = "1.0.193"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
